Resolves: tdf#125878 correct calculation of H:M:S from timestamp

This apparently has been wrong since the beginning in 2009.

It's a somewhat odd algorithm anyway, first calculating the time
in seconds, minutes and hours, but maybe there's a reason
regarding rounding, so not changing that.

Change-Id: I855d2c96094b4edb1095d20bcdfebdea6d6d943a
Reviewed-on: https://gerrit.libreoffice.org/73893
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 1436d2307d90f5ddbdcb0f129e59544306530342)
Reviewed-on: https://gerrit.libreoffice.org/73914